loginPage RegisterPage Design

--- a/public/assets/plugins/simplebar/css/simplebar.css
+++ b/public/assets/plugins/simplebar/css/simplebar.css
@@ -284,7 +284,7 @@ span.cls {
 
 .graps {
 	border: 1px solid rgb(228, 232, 237);
-	padding: 30px 30px;
+	padding: 0px 30px;
 	margin: 50px 0px;
 	box-shadow: 0 0 10px 0 #f5f5f5;
 	border-radius: 4px;
@@ -316,8 +316,18 @@ display: none;
 	font-size: 13px;
 	font-weight: 600;
 	letter-spacing: 1px;
+	padding: 16px 10px !important;
 }
-
+.rk-url div {
+	font-size: 12px;
+	color: #666;
+}
+.pgnd {
+	text-align: center;
+}
+.pgnd img {
+	opacity: 0.6;
+}
 .table-volsd {
 	border: solid 1px #dfdfdf;
 	margin: 35px 0 0 0;
@@ -454,9 +464,15 @@ tr.odd {
   position: relative;
   margin: 0 0 15px;    font-size: 13px;
 }
+.ed-keywo {
+	padding: 30px 0 0;
+}
+.grap-row {
+	padding-bottom: 30px;
+}
 .eiFseJ {
   border-right: 1px solid #dfdfdf;
-  padding: 0 30px 0 0;
+  padding: 30px 30px 30px 0;
 }.tlt {color: #b5adad;
   font-size: 12px;    margin: 0 0 0 19px;
 }
@@ -1078,13 +1094,14 @@ input[type=file] {
 	width: 100%;
 	text-align: left;
 	color: #666;
-	font-weight: 300;
-	font-size: 13px;
+	font-weight: 600;
+	font-size: 12px;
 }
 .bg-login form {
-	margin: 20px auto 0;
-	width: 100%;
+	margin: 15px 0;
+	width: 80%;
 	position: relative;
+	float: left;
 }
 .bg-login form .col-md-6 {
 	width: 100%;
@@ -1093,14 +1110,14 @@ input[type=file] {
 	width: 100%;
 	display: inline-block;
 	border: 1px solid #C1BEBE;
-	padding: 10px 10px;
+	padding: 14px 10px;
 	font-size: 14px;
 	color: #000;
 	border-radius: 6px;
-	margin: 0 0 7px 0;
+	margin: 0 0 10px 0;
 }
 .bg-login form .col-md-6.offset-md-4 {
-	margin: 13px 0 0 20px;
+	margin: 25px 0 0 20px;
 }
 .bg-login form .form-check {
 	padding: 0;
@@ -1108,6 +1125,7 @@ input[type=file] {
 .bg-login form .form-check #remember {
 	width: auto !important;
 	float: left;
+	padding: 10px 10px;
 }
 .bg-login form .form-check .form-check-label {
 	width: auto !important;
@@ -1115,6 +1133,7 @@ input[type=file] {
 	float: left;
 	margin: 1px 0 0 9px;
 	color: #666;
+	font-size: 12px;
 }
 .bg-login form .col-md-8.offset-md-4 {
 	margin: 20px 0 0 0;
@@ -1124,30 +1143,34 @@ input[type=file] {
 }
 .bg-login form .btn.btn-warning {
 	display: inline-block;
-	width: auto;
+	width: 100%;
 	background-color: transparent;
-	text-align: left;
-	padding: 12px 38px;
-	margin: 0 0 0 10px;
-	font-weight: 700;
-	color: #666;
-	font-size: 14px;
-	border: 1px solid #666;
+	text-align: center;
+	padding: 0;
+	margin: 24px 0 0 0;
+	font-weight: 400;
+	color: #FF725E;
+	font-size: 16px;
+	border: inherit;
 	font-family: 'Inter', sans-serif !important;
+	letter-spacing: -0.1px;
+	text-decoration: underline;
 }
 .bg-login form .btn.btn-primary {
 	background-color: #FF725E !important;
 	color: #fff;
-	padding: 12px 55px;
+	padding: 14px 55px;
 	font-size: 15px;
 	letter-spacing: 1.1px;
 	font-weight: 700;
 	border: none !important;
 	font-family: 'Inter', sans-serif !important;
+	width: 100%;
+	margin: 10px 0 0 0;
 }
 .bg-login form .btn.btn-link {
 	position: absolute;
-	top: -54px;
+	top: -51px;
 	width: 37%;
 	text-align: left;
 	font-size: 12px;
@@ -1155,21 +1178,22 @@ input[type=file] {
 	font-weight: 400;
 	right: 0;
 	text-align: right;
+	padding: 0;
 }
 .hadder-login {
 	text-align: left;
 }
 .hadder-login h3 {
-	font-size: 30px;
+	font-size: 27px;
 	font-weight: 800;
 	color: #000;
-	margin: 32px 0 0 0 !important;
+	margin: 20px 0 0 0 !important;
 	letter-spacing: -1.1px;
 }
 .hadder-login p {
 	color: #8E8E8E;
 	font-size: 14px;
-	margin: 10px 0 0 0;
+	margin: 4px 0 0 0;
 	width: 80%;
 	line-height: 18px;
 	font-weight: 300;
@@ -1177,21 +1201,22 @@ input[type=file] {
 .social-btn {
 	display: inline-block;
 	width: 100%;
-	margin: 20px 0 0 0;
+	margin: 30px 0 0 0;
 	text-align: left;
 }
 .social-btn a {
 	display: inline-block;
-	width: 47%;
-	text-align: left;
-	padding: 14px 14px 14px 42px;
-	margin: 0 8px 10px 0;
+	width: 40%;
+	text-align: center;
+	padding: 12px;
+	margin: 0 5px 0 0;
 	border-radius: 6px;
 	font-size: 13px;
-	font-weight: 400;
+	font-weight: 500;
 	position: relative;
 	color: #fff !important;
-	line-height: 17px;
+	line-height: 15px;
+	letter-spacing: -0.1px;
 }
 .social-btn .fb {
 	background-color: #2d4474;
@@ -1203,14 +1228,11 @@ input[type=file] {
 	background-color: #005377;
 }
 .social-btn img {
-	width: auto !important;
-	margin: 0 6px;
-	position: absolute;
-	left: 5px;
-	top: 12px;
+	width: 7px !important;
+	margin: 0 9px;
 }
 .google img {
-	width: auto !important;
+	width: 12px !important;
 }
 .social-btn .fb img {
 	left: 8px;
@@ -1261,11 +1283,11 @@ input:focus:focus-visible {
 .email-fild::after {
 	content: '';
 	position: absolute;
-	right: 21px;
+	right: 15px;
 	background: url("/assets/images/Vector-3.png");
 	width: 17px;
 	height: 14px;
-	top: 50px;
+	top: 53px;
 	z-index: 1;
 	opacity: 0.5;
 	background-size: cover;
@@ -1275,11 +1297,11 @@ input:focus:focus-visible {
 .pssword-fild::after {
 	content: '';
 	position: absolute;
-	right: 23px;
+	right: 15px;
 	background: url("/assets/images/Vector-1.png");
 	width: 14px;
 	height: 10px;
-	top: 50px;
+	top: 54px;
 	z-index: 1;
 	opacity: 0.6;
 	background-size: cover;
@@ -1295,7 +1317,7 @@ input:focus:focus-visible {
 	background: url("/assets/images/Vector-3.png");
 	width: 15px;
 	height: 12px;
-	top: 50px;
+	top: 54px;
 	z-index: 1;
 	opacity: 0.6;
 	background-size: cover;
@@ -1311,7 +1333,7 @@ input:focus:focus-visible {
 	background: url("/assets/images/Vector.png");
 	width: 13px;
 	height: 14px;
-	top: 50px;
+	top: 53px;
 	z-index: 1;
 	opacity: 0.6;
 	background-size: cover;
@@ -1327,7 +1349,7 @@ input:focus:focus-visible {
 	background: url("/assets/images/Vector-1.png");
 	width: 14px;
 	height: 10px;
-	top: 50px;
+	top: 56px;
 	z-index: 1;
 	opacity: 0.6;
 	background-size: cover;
@@ -1362,14 +1384,14 @@ input:focus:focus-visible {
 .alrdy-btn {
 	display: inline-block;
 	width: 100%;
-	text-align: left;
-	margin: 16px 0 0 2px;
+	text-align: center;
+	margin: 30px 0 0 0px;
 }
 .alrdy-btn p {
 	margin: 0 0 0 0;
 	color: #666;
 	font-weight: 300;
-	font-size: 13px;
+	font-size: 15px;
 }
 .alrdy-btn p a {
 	color: #FF725E;
@@ -1377,9 +1399,6 @@ input:focus:focus-visible {
 	text-transform: capitalize;
 	margin: 0 0 0 3px;
 	text-decoration: underline;
-}
-.card.rigestr-page {
-	padding: 35px 40px;
 }
 .rigestr-check {
 	display: inline-block;
@@ -1400,10 +1419,10 @@ input:focus:focus-visible {
 }
 .rigestr-check .form-check-label {
 	float: right;
-	width: 94%;
+	width: 93%;
 	letter-spacing: -0.1px;
-	font-size: 14px;
-	margin: 0px 0 0 0;
+	font-size: 12px;
+	margin: 3px 0 0 5px !important;
 }
 .rigestr-check .form-check-label a {
 	color: #FF725E;
@@ -1485,7 +1504,7 @@ input:focus:focus-visible {
 }
 .keword-from .-kewleft-side {
 	float: left;
-	width: 32%;
+	width: 26%;
 	text-align: left;
 	margin: 0 20px 0 0;
 }
@@ -1495,10 +1514,10 @@ input:focus:focus-visible {
 	text-align: left;
 }
 .-kewful-side {
-	width: 32%;
+	width: 26%;
 	text-align: left;
-	margin: 0;
-	float: right;
+	margin: 0px 0 0 15px;
+	float: left;
 }
 .keword-from label {
 	font-weight: 500;
@@ -1506,7 +1525,7 @@ input:focus:focus-visible {
 	margin: 0 0 5px 0;
 }
 .keword-from input {
-	padding: 11px 10px;
+	padding: 13px 10px;
 	height: auto;
 	border: 1px solid #dcdcdc;
 	font-size: 14px;
@@ -1535,17 +1554,17 @@ input:focus:focus-visible {
 	display: none;
 }
 .btn-keyword {
-	display: inline-block;
-	width: 100%;
-	margin: 40px auto;
+	float: right;
+	width: 17%;
+	margin: 26px 0 0 0;
 	text-align: center;
 }
 .btn-keyword .btn.btn-primary.form-control {
 	background-color: #FF725E;
 	color: #fff;
 	border-radius: 4px;
-	width: 20%;
-	padding: 15px 0;
+	width: 100%;
+	padding: 14px 0;
 	border: none !important;
 	font-size: 15px;
 	font-weight: 600;
@@ -1604,13 +1623,13 @@ input:focus:focus-visible {
 }
 .tab-saction .table-price {
 	display: inline-block;
-	width: 90%;
+	width: 100%;
 	margin: 0 auto !important;
 	padding: 0;
 }
 .keword-from .-kewright-side {
 	float: left;
-	width: 32%;
+	width: 26%;
 	text-align: left;
 	margin: 0 0 15px 0;
 }
@@ -1651,9 +1670,6 @@ input:focus:focus-visible {
 .rest-pasword .col-md-6.offset-md-4 {
 	margin: 20px 0 0 !important;
 }
-.card.rest-pasword {
-	padding: 30px 30px;
-}
 .research-keyword {
 	text-align: left;
 }
@@ -1673,20 +1689,20 @@ input:focus:focus-visible {
 	opacity: 0.4;
 }
 .or-box {
-	display: inline-block;
 	position: relative;
-	margin: 40px 0 0 0px;
-	width: 100%;
+	margin: 30px 0 0 0;
+	width: 82%;
+	float: left;
 }
 .inner-or-box {
 	position: relative;
 	width: 100%;
-	color: #666;
-	font-weight: 300;
+	color: #998f8f;
+	font-weight: 600;
 }
 .inner-or-box::before {
 	content: "";
-	width: 210px;
+	width: 190px;
 	height: 1px;
 	background-color: #dcdcdc;
 	position: absolute;
@@ -1695,7 +1711,7 @@ input:focus:focus-visible {
 }
 .inner-or-box::after {
 	content: "";
-	width: 210px;
+	width: 190px;
 	height: 1px;
 	background-color: #dcdcdc;
 	position: absolute;
@@ -1716,18 +1732,33 @@ input:focus:focus-visible {
 	display: inline-block;
 	width: 100%;
 	margin: 0 auto;
-	padding: 0 70px;
+	padding: 0 0 0 0;
+	text-align: center;
+}
+.right-login-new {
+	background-color: #f5f5f5;
+	width: 95%;
+	height: 100%;
+	float: right;
+}
+.login-new .col-md-6:nth-child(2) {
+	padding-right: 0;
 }
 .left-login-new {
-	padding: 100px 0;
+	padding: 40px 0 40px 100px;
 	display: inline-block;
-	width: 100%;
+	width: auto;
+}
+.right-login-new img {
+	width: 70% !important;
+	text-align: center;
+	margin: 7rem 0 0 7rem;
 }
 .left-login-new .container {
 	padding: 0;
 }
 .logo img {
-	width: 40% !important;
+	width: 30% !important;
 }
 .add-project-page {
 	display: inline-block;
@@ -2493,4 +2524,41 @@ ul.list-unstyled .check-bx input {
 }
 .text-box {
 	display: none;
+}
+.pace .pace-progress {
+	background: #FF725E !important;
+  }
+  .pace .pace-progress-inner {
+	box-shadow: inherit !important;
+}
+.mb-4.text-center {
+	display: none;
+}
+.left-login-new.register-page {
+	padding: 58px 0 40px 116px;
+	width: 100%;
+	float: left;
+}
+.left-login-new.rest-poswrod {
+	padding: 160px 0 40px 116px;
+	width: 100%;
+	float: left;
+}
+.rest-pas-right img {
+	margin: 2rem 0 0 3rem;
+	width: 69% !important;
+}
+.table th {
+	background-color: #666 !important;
+	border: 1px solid;
+}
+.form-check {
+	display: block;
+	min-height: inherit !important;
+}
+.form-check .form-check-input {
+	float: left;
+	margin-left: 0 !important;
+	border: 1px solid #Edcdcdc !important;
+	padding: 8px 9px !important;
 }
