--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -5628,3 +5628,137 @@ input::placeholder {
 
 
 }
+
+
+.competitor-page-saction-one {  display: inline-block; width: 100%; padding: 20px 24px;}
+.competitor-page-saction-one h2 { color: #000; font-size: 24px; font-weight: 700; margin: 0;}
+.competitor-page-saction-one .float-left {float: left;width: 15%;}
+.competitor-page-saction-one .float-left a {
+	display: inline-block;
+	background-color: #ff725e;
+	color: #fff;
+	padding: 10px 20px;
+	border-radius: 4px;
+	font-size: 16px;
+}
+.float-right ul li { padding: 5px 10px; z-index: 2; }
+.float-right ul li:not(.init) { float: left; width: 130px; display: none; background: #ddd; }
+.float-right ul li:not(.init):hover, .float-right ul li.selected:not(.init) { background: #09f; }
+.float-right li.init { cursor: pointer; }
+a#submit { z-index: 1; }
+.float-right {
+	float: left;
+	width: 30%;
+}
+ul.list-unstyled {
+	height: auto;
+	width: 100%;
+	margin: 0 !important;
+	position: relative;
+}
+.float-right .init {
+	padding: 11px 10px !important;
+	margin: 0 !important;
+	background-color: #fff !important;
+	border: 1px solid #dcdcdc;
+}
+.pocti {
+	position: absolute !important;
+	left: 0;
+	padding: 17px 10px !important;
+	border-radius: 0 !important;
+}
+.init::after {
+	content: '';
+	position: absolute;
+	background: url("/assets/images/down-arrow.png");
+	width: 20px;
+	height: 20px;
+	top: 14px;
+	right: 7px;
+	background-size: cover;
+	z-index: 1;
+	opacity: 0.6;
+}
+.init img {
+	margin: 0 17px 0 0;
+}
+#bar-chart {
+	display: none;
+}
+.competitor-page-saction-tow {
+	padding: 20px 24px;
+	display: inline-block;
+	width: 100%;
+	margin: 30px 0;
+}
+.competitor-page-saction-tow main {
+	background-color: #fff;
+	border: 1px solid #dcdcdc;
+	border-radius: 20px;
+	padding: 30px;
+	width: auto;
+	overflow: hidden;
+}
+.left-three {
+	float: left;
+	width: 50%;
+}
+.left-three h3 {
+	color: #000;
+	font-size: 25px;
+	font-weight: 700;
+	margin: 7px 0 0 0;
+	display: inline-block;
+	width: 100%;
+}
+.left-three h3 span {
+	color: #666;
+	font-weight: 300;
+	font-size: 15px;
+	margin: 0 0 0 15px;
+}
+.right-three {
+	float: right;
+	width: 50%;
+	text-align: right;
+}
+.right-three a {
+	display: inline-block;
+	padding: 10px 20px;
+	border: 1px solid rgb(241, 99, 52);
+	border-radius: 4px;
+	font-size: 15px;
+	font-weight: 600;
+}
+.right-three .add-competitor {
+	background-color: #ff725e;
+	color: #fff;
+}
+.export {
+	color: #ff725e !important;
+}
+.tbl {
+	display: inline-block;
+	width: 100%;
+	margin: 20px 0 0 0;
+}
+.tbl table {
+	width: 100%;
+}
+.tbl table th {
+	padding: 10px;
+	border: 1px solid #dcdcdc;
+	font-weight: 600;
+	color: #000;
+	background-color: #f1f1f1;
+}
+.tbl table th:nth-child(1) {
+	width: 5%;
+}
+.sc-bUQzRK.fxExc {
+	text-align: center;
+	width: 100%;
+	padding: 30px 0;
+	display: inline-block;
+}
