--- a/public/assets/plugins/simplebar/css/simplebar.css
+++ b/public/assets/plugins/simplebar/css/simplebar.css
@@ -1994,10 +1994,10 @@ input:focus:focus-visible {
 }
 
 .right-login-new {
-    background-color: #f5f5f5;
-    width: 95%;
-    height: 100%;
-    float: right;
+	background-color: #f5f5f5;
+	width: 95%;
+	height: 100vh;
+	float: right;
 }
 
 .login-new .col-md-6:nth-child(2) {
@@ -2011,9 +2011,9 @@ input:focus:focus-visible {
 }
 
 .right-login-new img {
-    width: 70% !important;
-    text-align: center;
-    margin: 7rem 0 0 7rem;
+	width: 59% !important;
+	text-align: center;
+	margin: 13rem 0 0 7rem;
 }
 
 .left-login-new .container {
