--- a/public/assets/front/css/style.css
+++ b/public/assets/front/css/style.css
@@ -20,7 +20,7 @@ body{
 }
 #navbarSupportedContent .navbar-nav.mr-auto li {
 	display: inline-block;
-	margin: 0 0 0 30px;
+	margin: 1px 0 0 24px;
 	width: auto;
 	position: relative;
 }
@@ -109,7 +109,7 @@ body{
 }
 #navbarSupportedContent .start-fre a {
 	display: inline-block;
-	width: 150px;
+	width: 135px;
 	height: 48px;
 	background-color: #FF725E;
 	text-align: center;
@@ -130,7 +130,7 @@ body{
 }
 #navbarSupportedContent .navbar-nav.mr-auto li a {
 	color: #000;
-	font-size: 16px;
+	font-size: 15px;
 	letter-spacing: 1px;
 	padding: 0 !important;
 }
@@ -140,7 +140,7 @@ body{
 .logo-box img {
 	display: inline-block;
 	margin: 0 0 0;
-	width: 23%;
+	width: 69%;
 	position: absolute;
 	top: -15px;
 }
@@ -750,6 +750,7 @@ td.started {
 	opacity: 0.7;
 	display: inline-block;
 	width: 100%;
+	text-transform: capitalize;
 }
 .box-footer ul li a:hover {
 	color: #FF725E;
@@ -834,12 +835,16 @@ input:focus-visible {
 .copy-rught p {
 	margin: 0px 0 0 0;
 	float: right;
-	text-align: left;
-	width: 77%;
+	text-align: center;
+	width: 100%;
 	color: #fff;
 	opacity: 0.7;
 	font-size: 14px;
 	font-weight: 400;
+	text-transform: capitalize;
+}
+.keyrank {
+	margin: 75px 0 0 0;
 }
 #navbarSupportedContent .start-fre a:hover {
 	background-color: #263238;
@@ -3094,6 +3099,7 @@ input:focus-visible {
 .post-saction-boxxx img {
 	width: 100%;
 	border-radius: 10px;
+	height: 275px;
 }
 .post-saction-boxxx .year-date {
 	margin: 25px 0 0 0;
@@ -3135,6 +3141,7 @@ input:focus-visible {
 	width: 23px;
 	border-radius: 0;
 	margin: 0 0 0 6px;
+	height: auto;
 }
 .keyword-saction-one {
 	display: inline-block;
@@ -3839,8 +3846,19 @@ li.nav-item.blog-nav {display: none !important;}
 	text-align: left;
 }
 
-<<<<<<< HEAD
-=======
+
+
+.contct-page {
+	display: inline-block;
+	width: 100%;
+	text-align: center;
+	background-color: #eeeeee;
+	padding: 40px 0;
+}
+
+
+
+
 section.keyrank {
     background: #f9f9f9;
     display: inline-block;
@@ -4292,4 +4310,267 @@ section.tol-unique {
 .key-right-box.web-tref img {
     width: 100%;
 }
->>>>>>> 1e49b7c2efd40ae85f2782c3ac761c4152c6ddc7
+
+
+
+
+.pb-70 {
+	padding-bottom: 70px;
+}
+.pt-100 {
+	padding-top: 100px;
+}
+.section-title h2 {
+	font-size: 35px;
+	font-weight: 600;
+	margin-top: 0;
+	line-height: 1.2;
+	color: #252525;
+	margin-bottom: 0;
+}
+.pt-45 {
+	padding-top: 45px;
+}
+.contact-info::before {
+	content: '';
+	position: absolute;
+	opacity: .1;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background-image: url(../images/call-us/call-shap1.png);
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+}
+.contact-info {
+	margin-bottom: 30px;
+	background-color: #FF725E;
+	padding: 52px 35px 22px;
+	border-radius: 15px;
+	position: relative;
+	z-index: 1;
+}
+.contact-info span {
+	color: #fff;
+	display: block;
+	margin-bottom: 5px;
+}
+.contact-info h2 {
+	color: #000;
+	font-size: 26px;
+	margin-bottom: 15px;
+}
+.contact-info p {
+	color: #fff;
+	margin-bottom: 20px;
+	font-size: 15px;
+	line-height: 17px;
+}
+.contact-info ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+.contact-info ul li {
+	display: block;
+	margin-bottom: 30px;
+	padding-left: 60px;
+	position: relative;
+}
+.contact-info ul li .content i {
+	width: 45px;
+	height: 45px;
+	line-height: 45px;
+	background-color: #fff;
+	font-size: 20px;
+	color: #fff;
+	border-radius: 50px;
+	border: 1px solid #333;
+	margin-bottom: 10px;
+	text-align: center;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+.contact-info ul li .content h3 {
+	font-size: 18px;
+	margin-bottom: 10px;
+	color: #fff;
+	display: block;
+}
+.contact-info ul li .content a {
+	color: #fff;
+	display: block;
+	font-weight: 400;
+	font-size: 15px;
+}
+.contact-form {
+	max-width: 800px;
+	position: relative;
+	z-index: 1;
+	margin-bottom: 30px;
+	margin-left: auto;
+	margin-right: auto;
+}
+.contact-form .form-group {
+	margin-bottom: 20px;
+	position: relative;
+}
+.contact-form .form-group label {
+	color: #252525;
+	font-size: 15px;
+	margin-bottom: 15px;
+	font-weight: 500;
+}
+.contact-form .form-group .form-control {
+	height: 50px;
+	color: #252525;
+	border: 1px solid #FF725E;
+	background-color: #fff;
+	font-size: 15px;
+	padding: 10px 20px;
+	width: 100%;
+	border-radius: 0;
+	font-weight: 500;
+}
+.contact-form .form-group .form-control {
+	height: 50px;
+	color: #252525;
+	border: 1px solid #FF725E;
+	background-color: #fff;
+	font-size: 15px;
+	padding: 10px 20px;
+	width: 100%;
+	border-radius: 0;
+	font-weight: 500;
+}
+.contact-form .agree-label label {
+	font-weight: 500;
+	color: #252525;
+	margin-left: 25px;
+}
+.contact-form .agree-label label a {
+	color: #FF725E;
+}
+.default-btn {
+	float: left;
+	padding: 12px 32px;
+	color: #fff;
+	text-align: center;
+	position: relative;
+	overflow: hidden;
+	z-index: 1;
+	background-color: #FF725E;
+	border: none;
+	border-radius: 4px;
+	margin: 40px 0 0 0;
+}
+.content img {
+	width: 31px;
+	float: left;
+	position: absolute;
+	left: 14px;
+	top: 6px;
+}
+.page-banner-area::before {
+	position: absolute;
+	content: "";
+	height: 100%;
+	width: 100%;
+	background-color: #000;
+	left: 0;
+	right: 0;
+	top: 0;
+	z-index: -1;
+	opacity: .6;
+}
+.page-banner-area.item-bg3 {
+	background: url(/assets/images/page-banner-4.jpg);
+}
+.page-banner-area {
+	position: relative;
+	z-index: 1;
+	background-position: 50%;
+	background-size: cover !important;
+	background-repeat: no-repeat;
+	height: 100%;
+	padding-top: 150px;
+	padding-bottom: 150px;
+	background-attachment: fixed;
+}
+.page-banner-content {
+	text-align: center;
+}
+.page-banner-content h2 {
+	color: #fff;
+	margin-bottom: 30px;
+	font-size: 45px;
+}
+.page-banner-content ul {
+	text-align: center;
+	position: relative;
+	right: 0;
+	padding-left: 0;
+	margin-bottom: 0;
+	list-style-type: none;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+.page-banner-content ul li {
+	display: inline-block;
+	margin-right: 25px;
+	font-weight: 600;
+	color: #f64c67;
+	position: relative;
+}
+.page-banner-content ul li:first-child {
+	margin-left: 0;
+}
+.page-banner-content ul li a {
+	display: block;
+	color: #fff;
+}
+.page-banner-content {
+	text-align: center;
+	width: 100%;
+	display: inline-block;
+}
+.d-table {
+	display: inline-block !important;
+	width: 100%;
+}
+.about-area.ptb-100 {
+	padding: 100px 0;
+	display: inline-block;
+	width: 100%;
+}
+.about-image-warp img {
+	width: 100%;
+}
+.about-content.warp h3 {
+	color: #000;
+	font-weight: 600;
+	line-height: 45px;
+	margin: 15px 0 0 0;
+	width: 100%;
+	display: inline-block;
+}
+.about-content.warp strong {
+	margin: 30px 0 0 0;
+	display: inline-block;
+	font-size: 15px;
+}
+.about-content.warp p {
+	font-size: 14px;
+	line-height: 20px;
+}
+.about-image-warp img {
+	width: 100%;
+	height: 439px;
+	object-fit: cover;
+}
