--- a/public/assets/front/css/style.css
+++ b/public/assets/front/css/style.css
@@ -809,6 +809,9 @@ input:focus-visible {
 	color: #fff;
 	margin: 0;
 }
+.box-footer .check label {
+	text-align: left;
+}
 .check {
 	margin: 20px 0 0 0;
 }
@@ -3831,6 +3834,22 @@ li.nav-item.blog-nav {display: none !important;}
 	font-size: 16px;
 	line-height: 25px;
 	color: #666;
+	margin: 10px 0 0 0;
+}
+.blog-detlas-saction-left ul {
+	display: inline-block;
+	width: 100%;
+	margin: 15px 0 0 15px;
+}
+.blog-detlas-saction-left em {
+	color: #000;
+	font-style: normal;
+	font-size: 16px;
+	font-weight: 600;
+}
+.blog-detlas-saction-left a {
+	color: #FF725E;
+	text-decoration: underline;
 }
 .blog-detlas-saction-left h3 {
 	font-size: 30px;
@@ -3840,7 +3859,19 @@ li.nav-item.blog-nav {display: none !important;}
 	display: inline-block;
 	width: 100%;
 	font-size: 16px;
-	margin: 7px 0;
+	margin: 4px 0;
+	position: relative;
+	padding: 0 0 0 20px;
+}
+.blog-detlas-saction-left li::before {
+	content: '';
+	position: absolute;
+	left: 0;
+	width: 10px;
+	height: 10px;
+	background-color: #FF725E;
+	border-radius: 50%;
+	top: 6px;
 }
 .new-boxhome-inner {
 	text-align: left;
@@ -4555,10 +4586,19 @@ section.tol-unique {
 .about-content.warp h3 {
 	color: #000;
 	font-weight: 600;
-	line-height: 45px;
+	line-height: 30px;
 	margin: 15px 0 0 0;
 	width: 100%;
 	display: inline-block;
+	font-size: 27px;
+}
+.about-content p a {
+	color: #FF725E;
+	text-transform: capitalize;
+	font-size: 17px;
+	font-weight: 600;
+	margin: 0 0 0 4px;
+	text-decoration: underline;
 }
 .about-content.warp strong {
 	margin: 30px 0 0 0;
@@ -4573,4 +4613,31 @@ section.tol-unique {
 	width: 100%;
 	height: 439px;
 	object-fit: cover;
+}
+
+
+
+
+.blog-detlas-saction .col-md-8 {
+	width: 100%;
+	flex: inherit !important;
+	max-width: 100%;
+}
+.blog-detlas-saction img {
+	width: 100%;
+}
+.blog-detlas-saction-left p strong {
+	color: #000;
+	font-size: 18px;
+	margin: 20px 0 0 0;
+	display: inline-block;
+}
+.post-saction-home .row .col-md-4 {
+	float: inherit;
+	display: inherit;
+}
+.post-saction-home .row {
+	text-align: center;
+	width: 100%;
+	display: inline-block;
 }
