--- a/public/assets/front/css/style.css
+++ b/public/assets/front/css/style.css
@@ -148,7 +148,7 @@ body{
 	display: inline-block;
 	width: 100%;
 	margin: 0;
-	padding: 70px 0;
+	padding: 35px 0;
 	background-color: #f9f9f9;
 }
 .banner-saction-box-left h2 {
@@ -4640,4 +4640,9 @@ section.tol-unique {
 	text-align: center;
 	width: 100%;
 	display: inline-block;
+}
+.sticky img {
+	width: 53%;
+	top: -6px;
+	transition-duration: 0.8s;
 }
